# comfyui-civitai-updater

./: .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
comfy_updater/: __init__.py  civitai_client.py  config_store.py  constants.py  hashing.py  jobs.py  node_info.py  path_resolver.py  plugin.py  routes.py  sidecar.py  updater_service.py
js/: civitai_updater.js
wiki/: API.md  Architecture.md  Development.md  Home.md  Troubleshooting.md  Usage.md
